--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -9,9 +9,8 @@ bind "]" "toggle dota_health_per_vertical_marker 250 350 450 625"
 //Quick Runecheck
 bind "P" "runecheck"
 alias "runecheck" "runechecktop"
-alias "runechecktop" "dota_camera_setpos -2273.898682 1232.745483 982.072876; alias runecheck runecheckbot"
-alias "runecheckbot" "dota_camera_setpos 3035.773438 -2972.680176 966.072937; alias runecheck runecheckhero"
-alias "runecheckhero" "+dota_camera_follow; -dota_camera_follow; +dota_camera_follow
+alias "runechecktop" "dota_camera_setpos -2273 1800; alias runecheck runecheckbot"
+alias "runecheckbot" "dota_camera_setpos 3035 -2350; alias runecheck runechecktop"
 
 // Enables the console
 con_enable "1"
