--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,23 +1,44 @@
 //Enables Range Finder
+dota_disable_range_finder 0
 
 //Enlarge minimap hero display
-dota_minimap_hero_size "800"
+dota_minimap_hero_size "850"
 
 //toggle health keys
 bind "]" "toggle dota_health_per_vertical_marker 250 350 450 625"
 
+// Current time in chat
+bind "[" "chatwheel_say 57"
+
+//Roshan timer
+//bind "j" "exec roshan.cfg"
+
+
 //Quick Runecheck
-bind "P" "runecheck"
-alias "runecheck" "runechecktop"
-alias "runechecktop" "dota_camera_setpos -2273 1800; alias runecheck runecheckbot"
-alias "runecheckbot" "dota_camera_setpos 3035 -2350; alias runecheck runechecktop"
+alias "rune" "toprune"        // Toggle between Top-Bot
+alias "toprune" "dota_camera_set_lookatpos -2273 1800; alias rune botrune"
+alias "botrune"  "dota_camera_set_lookatpos 3035 -2350; alias rune toprune"
+bind "P" "rune"
 
 // Enables the console
 con_enable "1"
+
+//Reload Autoexec
+bind "F10" "exec autoexec.cfg"
 
 //Longer duration Pings
 dota_minimap_ping_duration 5
 dota_minimap_ping_tag_duration 5
 
-// Current time in chat
-bind "[" "chatwheel_say 57"
+//Shorten end time
+dota_sf_game_end_delay 1
+
+//Minimap Misclick Time
+dota_minimap_misclick_time 0.25
+
+//Print message
+echo " "
+echo "----------------------------------------------"
+echo " Your Custom DOTA2 Settings Have Been Loaded!" "
+echo "----------------------------------------------"
+echo " "
