--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,5 +1,61 @@
+//Misty's Autoexec.cfg file.
+
+//Put this in dota 2 beta/dota/cfg/autoexec.cfg
+//Originally from http://github.com/bxio/dota2settings
+
+//Some of this stolen from Arteezy's Autoexec.cfg file
+cl_cmdrate "60"                         //Amount of updates sent to server per second
+cl_updaterate "60"                      //Amount of updates received from server per second
+rate "80000"                            //Total amount of bandwith dota may use
+cl_interp "0"                           //More network stuff below...
+cl_interp_ratio "1"
+cl_smooth "1"
+cl_smoothtime "0.01"
+cl_lagcompensation "1"
+cl_pred_optimize "2"
+dota_camera_disable_zoom "1"            //Can't zoom camera in
+//dota_minimap_misclick_time "0"        //Removes delay before allowing input on minimap
+
+net_graph "1"
+//Netgraph settings, net_graph 1 enables in game with console
+net_graphheight "64"
+net_graphinsetbottom "425"
+net_graphinsetleft "0"
+net_graphinsetright "-83"
+net_graphpos "1"
+net_graphproportionalfont "0"
+net_graphtext "1
+
+//Netgraph Toggle
+alias "ng" "ngOn"        // Toggle between On-Off
+alias "ngOn" "net_graph 1; alias ng ngOff"
+alias "ngOff"  "net_graph 0; alias ng ngOn"
+bind "\" "ng"
+
+
+//Misc and Trial settings
+bind "9" "say_team Ultimate ready, Ping me furiously or say in chat if you need me to use."
+bind "0" "say_team re"
+
+
+dota_always_show_player_names "1"     //Force show all player's names
+dota_camera_speed "3000"              //Increase the camera scrolling speed
+dota_player_multipler_orders "1"      //CTRL+click to select all units you control
+dota_player_units_auto_attack "1"     //Summoned units always auto attack
+// dota_reset_camera_on_spawn "0"     //Camera doesn't jump to hero on respawn
+
+
+//Fade time on DMG done/received reduced to half duration
+dota_health_hurt_decay_time_max "0.4"   // (Default "0.8")
+dota_health_hurt_decay_time_min "0.15"  // (Default "0.3")
+dota_health_hurt_delay "0.05"           // (Default "0.1")
+dota_pain_decay "0.4"                   // (Default "0.8")
+dota_pain_factor "1.5"                  // (Default "3")
+dota_pain_fade_rate "1.5"               // (Default "3")
+dota_pain_multiplier "0.4"              // (Default "0.8")
+
 //Enables Range Finder
-dota_disable_range_finder 0
+dota_disable_range_finder "0"
 
 //Enlarge minimap hero display
 dota_minimap_hero_size "850"
@@ -10,11 +66,7 @@ bind "]" "toggle dota_health_per_vertical_marker 250 350 450 625"
 // Current time in chat
 bind "[" "chatwheel_say 57"
 
-//Roshan timer
-//bind "j" "exec roshan.cfg"
-
-
-//Quick Runecheck
+//Quick Runecheck Using P
 alias "rune" "toprune"        // Toggle between Top-Bot
 alias "toprune" "dota_camera_set_lookatpos -2273 1800; alias rune botrune"
 alias "botrune"  "dota_camera_set_lookatpos 3035 -2350; alias rune toprune"
@@ -27,18 +79,18 @@ con_enable "1"
 bind "F10" "exec autoexec.cfg"
 
 //Longer duration Pings
-dota_minimap_ping_duration 5
-dota_minimap_ping_tag_duration 5
+dota_minimap_ping_duration "5"
+dota_minimap_ping_tag_duration "5"
 
 //Shorten end time
-dota_sf_game_end_delay 1
+dota_sf_game_end_delay "1"
 
 //Minimap Misclick Time
-dota_minimap_misclick_time 0.25
+dota_minimap_misclick_time "0.25"
 
 //Print message
 echo " "
 echo "----------------------------------------------"
-echo " Your Custom DOTA2 Settings Have Been Loaded!" "
+echo " AutoExec Loaded, Press F10 to reload." "
 echo "----------------------------------------------"
 echo " "
