Added a bunch of toggles

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,9 +1,13 @@
 //Misty's Autoexec.cfg file.
-
-//Put this in dota 2 beta/dota/cfg/autoexec.cfg
+//Put this in Steam/SteamApps/common/dota 2 beta/dota/cfg/autoexec.cfg
 //Originally from http://github.com/bxio/dota2settings
 
-//Some of this stolen from Arteezy's Autoexec.cfg file
+
+engine_no_focus_sleep "0" //when alt tabbed frames will not drop
+
+/////////////////////////////
+//    Network Settings    //
+///////////////////////////
 cl_cmdrate "60"                         //Amount of updates sent to server per second
 cl_updaterate "60"                      //Amount of updates received from server per second
 rate "80000"                            //Total amount of bandwith dota may use
@@ -14,9 +18,11 @@ cl_smoothtime "0.01"
 cl_lagcompensation "1"
 cl_pred_optimize "2"
 dota_camera_disable_zoom "1"            //Can't zoom camera in
-//dota_minimap_misclick_time "0"        //Removes delay before allowing input on minimap
+dota_minimap_misclick_time "0.5"          //Removes delay before allowing input on minimap
 
-//Netgraph settings, net_graph 1 enables in game with console
+///////////////////////////////
+//    Net_graph Settings    //
+/////////////////////////////
 net_graphheight "64"
 net_graphinsetbottom "425"
 net_graphinsetleft "0"
@@ -29,12 +35,7 @@ net_graphtext "1
 alias "ng" "ngOn"        // Toggle between On-Off
 alias "ngOn" "net_graph 1; alias ng ngOff"
 alias "ngOff"  "net_graph 0; alias ng ngOn"
-bind "\" "ng"
-
-
-//Misc and Trial settings
-bind "9" "say_team Ultimate ready, Ping me furiously or say in chat if you need me to use."
-bind "0" "say_team re"
+//bind "\" "ng"
 
 
 dota_always_show_player_names "1"     //Force show all player's names
@@ -57,13 +58,13 @@ dota_pain_multiplier "0.4"              // (Default "0.8")
 dota_disable_range_finder "0"
 
 //Enlarge minimap hero display
-dota_minimap_hero_size "850"
+dota_minimap_hero_size "1000"
 
 //toggle health keys
-bind "]" "toggle dota_health_per_vertical_marker 250 350 450 625"
+bind "]" "toggle dota_health_per_vertical_marker 333 450 507 543 712 637"
 
 // Current time in chat
-bind "[" "chatwheel_say 57"
+bind "[" "chatwheel_say 57;say_team Aegis expires in 6 mins, Rosh up in 8-11."
 
 //Quick Runecheck Using P
 alias "rune" "toprune"        // Toggle between Top-Bot
@@ -86,6 +87,56 @@ dota_sf_game_end_delay "1"
 
 //Minimap Misclick Time
 dota_minimap_misclick_time "0.25"
+
+//////////////////////////
+//    In-Game Chat     //
+////////////////////////
+bind "9" "chatwheel_say 8"//missing(my lane)
+bind "0" "chatwheel_say 42"//they have detection
+bind "t" "chatwheel_say 57"//current game time
+bind "k" "chatwheel_say 32"//invisible enemy nearby
+
+
+////////////////////////////
+//    Various Toggles    //
+//////////////////////////
+//Hero Icons Toggle
+alias "heroicons_toggle" "minimapheroi_on"
+alias "minimapheroi_on" "dota_minimap_always_draw_hero_icons 1;alias heroicons_toggle minimapheroi_off;dota_center_message 0.25 icons_1"
+alias "minimapheroi_off" "dota_minimap_always_draw_hero_icons 0;alias heroicons_toggle minimapheroi_on;dota_center_message 0.25 icons_0"
+bind "/" "heroicons_toggle"
+
+//Autoattack Toggle
+alias "attackauto_toggle" "attacka_on"
+alias "attacka_on" "dota_player_units_auto_attack 1; alias attackauto_toggle attacka_off;dota_center_message 0.25 AutoAttack_On"
+alias "attacka_off" "dota_player_units_auto_attack 0; alias attackauto_toggle attacka_on;dota_center_message 0.25 AutoAttack_Off"
+//bind "UPARROW" "chatwheel_say 32"
+
+//Autoattack after spell toggle
+alias "attackautospell_toggle" "attackas_off"
+alias "attackas_off" "dota_player_units_auto_attack_after_spell 0; alias attackautospell_toggle attackas_on;dota_center_message 0.25 AutoAttackSpell_Off"
+alias "attackas_on" "dota_player_units_auto_attack_after_spell 1; alias attackautospell_toggle attackas_off;dota_center_message 0.25 AutoAttackSpell_On"
+//bind "DOWNARROW" "attackautospell_toggle"
+
+//Teleporting halts
+alias "teleprequirehalt_toggle" "teleprh_off"
+alias "teleprh_off" "dota_player_teleport_requires_halt 0; alias teleprequirehalt_toggle teleprh_on;dota_center_message 0.25 TelReqHalt_Off"
+alias "teleprh_on" "dota_player_teleport_requires_halt 1; alias teleprequirehalt_toggle teleprh_off;dota_center_message 0.25 TelReqHalt_On"
+//bind "RIGHTARROW" "teleprequirehalt_toggle"
+
+//Select summoned units
+alias "summonselect_toggle" "summons_on"
+alias "summons_on" "dota_player_add_summoned_to_selection 1;alias summonselect_toggle summons_off;dota_center_message 0.25 selsumm_On"
+alias "summons_off" "dota_player_add_summoned_to_selection 0;alias summonselect_toggle summons_on;dota_center_message 0.25 selsumm_Off"
+//bind "LEFTARROW" "summonselect_toggle"
+
+//Misc and Trial settings
+//bind "9" "say_team Ultimate ready, Ping me or say in chat if you need me to use."
+//bind "0" "say_team re"
+
+
+
+
 
 //Print message
 echo " "
