--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -18,7 +18,7 @@ cl_smoothtime "0.01"
 cl_lagcompensation "1"
 cl_pred_optimize "2"
 dota_camera_disable_zoom "1"            //Can't zoom camera in
-dota_minimap_misclick_time "0.5"          //Removes delay before allowing input on minimap
+dota_minimap_misclick_time "0.3"          //Removes delay before allowing input on minimap
 
 ///////////////////////////////
 //    Net_graph Settings    //
@@ -63,9 +63,6 @@ dota_minimap_hero_size "1000"
 //toggle health keys
 bind "]" "toggle dota_health_per_vertical_marker 333 450 507 543 712 637"
 
-// Current time in chat
-bind "[" "chatwheel_say 57;say_team Aegis expires in 6 mins, Rosh up in 8-11."
-
 //Quick Runecheck Using P
 alias "rune" "toprune"        // Toggle between Top-Bot
 alias "toprune" "dota_camera_set_lookatpos -2273 1800; alias rune botrune"
@@ -95,6 +92,7 @@ bind "9" "chatwheel_say 8"//missing(my lane)
 bind "0" "chatwheel_say 42"//they have detection
 bind "t" "chatwheel_say 57"//current game time
 bind "k" "chatwheel_say 32"//invisible enemy nearby
+bind "[" "chatwheel_say 57;say_team Aegis expires in 6 mins, Rosh up in 8-11."
 
 
 ////////////////////////////
@@ -135,12 +133,9 @@ alias "summons_off" "dota_player_add_summoned_to_selection 0;alias summonselect_
 //bind "0" "say_team re"
 
 
-
-
-
 //Print message
 echo " "
 echo "----------------------------------------------"
-echo " AutoExec Loaded, Press F10 to reload." "
+echo " AutoExec Loaded, Press F10 to reload."
 echo "----------------------------------------------"
 echo " "
