--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -8,15 +8,6 @@ engine_no_focus_sleep "0" //when alt tabbed frames will not drop
 /////////////////////////////
 //    Network Settings    //
 ///////////////////////////
-cl_cmdrate "60"                         //Amount of updates sent to server per second
-cl_updaterate "60"                      //Amount of updates received from server per second
-rate "80000"                            //Total amount of bandwith dota may use
-cl_interp "0"                           //More network stuff below...
-cl_interp_ratio "1"
-cl_smooth "1"
-cl_smoothtime "0.01"
-cl_lagcompensation "1"
-cl_pred_optimize "2"
 dota_camera_disable_zoom "1"            //Can't zoom camera in
 dota_minimap_misclick_time "0.3"          //Removes delay before allowing input on minimap
 
@@ -32,10 +23,10 @@ net_graphproportionalfont "0"
 net_graphtext "1
 
 //Netgraph Toggle
-alias "ng" "ngOn"        // Toggle between On-Off
-alias "ngOn" "net_graph 1; alias ng ngOff"
-alias "ngOff"  "net_graph 0; alias ng ngOn"
-//bind "\" "ng"
+alias "ngToggle" "ng_On"        // Toggle between On-Off
+alias "ng_On" "net_graph 1; alias ngToggle ng_Off"
+alias "ng_Off"  "net_graph 0; alias ngToggle ng_On"
+//bind "\" "ngToggle"
 
 
 dota_always_show_player_names "1"     //Force show all player's names
@@ -83,32 +74,34 @@ dota_minimap_ping_tag_duration "5"
 dota_sf_game_end_delay "1"
 
 //Minimap Misclick Time
-dota_minimap_misclick_time "0.25"
+dota_minimap_misclick_time "0.5"
 
 //////////////////////////
 //    In-Game Chat     //
 ////////////////////////
-bind "9" "chatwheel_say 8"//missing(my lane)
-bind "0" "chatwheel_say 42"//they have detection
+bind "-" "chatwheel_say 8"//missing(my lane)
 bind "t" "chatwheel_say 57"//current game time
 bind "k" "chatwheel_say 32"//invisible enemy nearby
-bind "[" "chatwheel_say 57;say_team Aegis expires in 6 mins, Rosh up in 8-11."
-
+bind "," "chatwheel_say 42"//they have detection
+bind "j" "chatwheel_say 2"//Get back!
+bind "," "chatwheel_say 26"//Out of mana
+bind "." "chatwheel_say 7"//Well played! (this is rarely used at my mmr :P)
+bind "[" "chatwheel_say 57; say_team Aegis expires in 6 mins, Rosh up in 8-11."
 
 ////////////////////////////
 //    Various Toggles    //
 //////////////////////////
 //Hero Icons Toggle
-alias "heroicons_toggle" "minimapheroi_on"
-alias "minimapheroi_on" "dota_minimap_always_draw_hero_icons 1;alias heroicons_toggle minimapheroi_off;dota_center_message 0.25 icons_1"
-alias "minimapheroi_off" "dota_minimap_always_draw_hero_icons 0;alias heroicons_toggle minimapheroi_on;dota_center_message 0.25 icons_0"
-bind "/" "heroicons_toggle"
+alias "HeroIcons_toggle" "MinimapHeroIcon_on"
+alias "MinimapHeroIcon_on" "dota_minimap_always_draw_hero_icons 1;alias HeroIcons_toggle MinimapHeroIcon_off;dota_center_message 0.25 icons_1"
+alias "MinimapHeroIcon_off" "dota_minimap_always_draw_hero_icons 0;alias HeroIcons_toggle MinimapHeroIcon_on;dota_center_message 0.25 icons_0"
+bind "/" "HeroIcons_toggle"
 
 //Autoattack Toggle
 alias "attackauto_toggle" "attacka_on"
 alias "attacka_on" "dota_player_units_auto_attack 1; alias attackauto_toggle attacka_off;dota_center_message 0.25 AutoAttack_On"
 alias "attacka_off" "dota_player_units_auto_attack 0; alias attackauto_toggle attacka_on;dota_center_message 0.25 AutoAttack_Off"
-//bind "UPARROW" "chatwheel_say 32"
+//bind "UPARROW" "attackautospell_toggle"
 
 //Autoattack after spell toggle
 alias "attackautospell_toggle" "attackas_off"
@@ -127,11 +120,6 @@ alias "summonselect_toggle" "summons_on"
 alias "summons_on" "dota_player_add_summoned_to_selection 1;alias summonselect_toggle summons_off;dota_center_message 0.25 selsumm_On"
 alias "summons_off" "dota_player_add_summoned_to_selection 0;alias summonselect_toggle summons_on;dota_center_message 0.25 selsumm_Off"
 //bind "LEFTARROW" "summonselect_toggle"
-
-//Misc and Trial settings
-//bind "9" "say_team Ultimate ready, Ping me or say in chat if you need me to use."
-//bind "0" "say_team re"
-
 
 //Print message
 echo " "
