Reworked how some keys were bound

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -26,7 +26,7 @@ net_graphtext "1
 alias "ngToggle" "ng_On"        // Toggle between On-Off
 alias "ng_On" "net_graph 1; alias ngToggle ng_Off"
 alias "ng_Off"  "net_graph 0; alias ngToggle ng_On"
-//bind "\" "ngToggle"
+bind "\" "ngToggle"
 
 
 dota_always_show_player_names "1"     //Force show all player's names
@@ -74,19 +74,24 @@ dota_minimap_ping_tag_duration "5"
 dota_sf_game_end_delay "1"
 
 //Minimap Misclick Time
-dota_minimap_misclick_time "0.5"
+dota_minimap_misclick_time "0.25"
 
 //////////////////////////
 //    In-Game Chat     //
 ////////////////////////
-bind "-" "chatwheel_say 8"//missing(my lane)
+//bind "," "chatwheel_say 42"//they have detection
+//bind "." "chatwheel_say 7"//Well played! (this is rarely used at my mmr :P)
+//bind "-" "chatwheel_say 8"//missing(my lane)
+
 bind "t" "chatwheel_say 57"//current game time
 bind "k" "chatwheel_say 32"//invisible enemy nearby
-bind "," "chatwheel_say 42"//they have detection
-bind "j" "chatwheel_say 2"//Get back!
-bind "," "chatwheel_say 26"//Out of mana
-bind "." "chatwheel_say 7"//Well played! (this is rarely used at my mmr :P)
+
+bind "," "chatwheel_say 2"//Get back!
+bind "." "chatwheel_say 1"//Careful! (this is rarely used at my mmr :P)
+
 bind "[" "chatwheel_say 57; say_team Aegis expires in 6 mins, Rosh up in 8-11."
+bind "9" "chatwheel_say 26"//Out of mana
+bind "0" "say_team Mana boots please"
 
 ////////////////////////////
 //    Various Toggles    //
