Updated for rekindling soul update

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -52,7 +52,7 @@ dota_disable_range_finder "0"
 dota_minimap_hero_size "1000"
 
 //toggle health keys
-bind "]" "toggle dota_health_per_vertical_marker 333 450 507 543 712 637"
+bind "]" "toggle dota_health_per_vertical_marker 169 333 450 263 507 543 356 712 637"
 
 //Quick Runecheck Using P
 alias "rune" "toprune"        // Toggle between Top-Bot
@@ -89,9 +89,8 @@ bind "k" "chatwheel_say 32"//invisible enemy nearby
 bind "," "chatwheel_say 2"//Get back!
 bind "." "chatwheel_say 1"//Careful! (this is rarely used at my mmr :P)
 
-bind "[" "chatwheel_say 57; say_team Aegis expires in 6 mins, Rosh up in 8-11."
+bind "[" "chatwheel_say 57; say_team Aegis expires in 5 mins, Rosh up in 8-11."
 bind "9" "chatwheel_say 26"//Out of mana
-bind "0" "say_team Mana boots please"
 
 ////////////////////////////
 //    Various Toggles    //
