--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -86,6 +86,7 @@ dota_minimap_misclick_time "0.25"
 bind "t" "chatwheel_say 57"//current game time
 bind "k" "chatwheel_say 32"//invisible enemy nearby
 
+bind "b" "chatwheel_say 2"//Get back!
 bind "," "chatwheel_say 2"//Get back!
 bind "." "chatwheel_say 1"//Careful! (this is rarely used at my mmr :P)
 
