--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -28,6 +28,8 @@ alias "ng_On" "net_graph 1; alias ngToggle ng_Off"
 alias "ng_Off"  "net_graph 0; alias ngToggle ng_On"
 bind "\" "ngToggle"
 
+//No embers for me
+dota_embers "0"
 
 dota_always_show_player_names "1"     //Force show all player's names
 dota_camera_speed "3000"              //Increase the camera scrolling speed
@@ -84,9 +86,8 @@ dota_minimap_misclick_time "0.25"
 //bind "-" "chatwheel_say 8"//missing(my lane)
 
 bind "t" "chatwheel_say 57"//current game time
-bind "k" "chatwheel_say 32"//invisible enemy nearby
+bind "k" "chatwheel_say 0"//Okay.
 
-bind "b" "chatwheel_say 2"//Get back!
 bind "," "chatwheel_say 2"//Get back!
 bind "." "chatwheel_say 1"//Careful! (this is rarely used at my mmr :P)
 
@@ -128,7 +129,7 @@ alias "summons_off" "dota_player_add_summoned_to_selection 0;alias summonselect_
 
 //Print message
 echo " "
-echo "----------------------------------------------"
-echo " AutoExec Loaded, Press F10 to reload."
-echo "----------------------------------------------"
+echo "-------------------------------------------------------"
+echo " AutoExec Loaded, Press F10 to reload, F11 to Dismiss. "
+echo "-------------------------------------------------------"
 echo " "
