Started adding tags to my options

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,15 +1,33 @@
-//Misty's Autoexec.cfg file.
-//Put this in Steam/SteamApps/common/dota 2 beta/dota/cfg/autoexec.cfg
-//Originally from http://github.com/bxio/dota2settings
+// Dota 2 Autoexec Script  (/u/bxio)
+// Originally from http://github.com/bxio/dota2settings
 
+// Directions:
+// 1. Enable the Dota 2 console: http://www.hattongames.com/2012/03/how-to-enable-the-console-in-dota-2
+// 2. Place script in <Steam folder>/SteamApps/common/dota 2 beta/dota/cfg.
+// 3. For changes to take effect, restart Dota or enter "exec autoexec.cfg" into the console. If you're in game, you can hit F10 to reload changes as well.
 
-engine_no_focus_sleep "0" //when alt tabbed frames will not drop
+// Notes:
+// Some keys may not work until you unbind them in the GUI settings (top left corner of start screen).
+// Many console variables are boolean (0 means off and 1 means on), so they can be enabled/disabled that way.
 
-/////////////////////////////
-//    Network Settings    //
-///////////////////////////
-dota_camera_disable_zoom "1"            //Can't zoom camera in
-dota_minimap_misclick_time "0.3"          //Removes delay before allowing input on minimap
+// Don't drop frame rate when Alt-tabbed.
+engine_no_focus_sleep "0"
+
+// Enable console on game launch. This allows you to use the console without specifying the -console launch option.
+con_enable "1"
+
+// Enable cheats in local lobbies
+sv_cheats "1"
+
+// When enabled, right clicking an allied creep can deny it
+dota_force_right_click_attack 0
+
+// Camera can't zoom in game mode
+dota_camera_disable_zoom "1"
+
+// removes delay before allowing input on minimap
+dota_minimap_misclick_time "0.3"
+
 
 ///////////////////////////////
 //    Net_graph Settings    //
