Added chatwheel modifiers

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,33 +1,29 @@
-// Dota 2 Autoexec Script  (/u/bxio)
-// Originally from http://github.com/bxio/dota2settings
+//Dota 2 Autoexec Script  (/u/bxio)
+//Originally from http://github.com/bxio/dota2settings
 
-// Directions:
-// 1. Enable the Dota 2 console: http://www.hattongames.com/2012/03/how-to-enable-the-console-in-dota-2
-// 2. Place script in <Steam folder>/SteamApps/common/dota 2 beta/dota/cfg.
-// 3. For changes to take effect, restart Dota or enter "exec autoexec.cfg" into the console. If you're in game, you can hit F10 to reload changes as well.
+//Directions:
+//1. Enable the Dota 2 console: http://www.hattongames.com/2012/03/how-to-enable-the-console-in-dota-2
+//2. Place script in <Steam folder>/SteamApps/common/dota 2 beta/dota/cfg.
+//3. For changes to take effect, restart Dota or enter "exec autoexec.cfg" into the console. If you're in game, you can hit F10 to reload changes as well.
 
-// Notes:
-// Some keys may not work until you unbind them in the GUI settings (top left corner of start screen).
-// Many console variables are boolean (0 means off and 1 means on), so they can be enabled/disabled that way.
+//Notes:
+//Some keys may not work until you unbind them in the GUI settings (top left corner of start screen).
+//Many console variables are boolean (0 means off and 1 means on), so they can be enabled/disabled that way.
 
-// Don't drop frame rate when Alt-tabbed.
+//Don't drop frame rate when Alt-tabbed.
 engine_no_focus_sleep "0"
 
-// Enable console on game launch. This allows you to use the console without specifying the -console launch option.
+//Enable console on game launch. This allows you to use the console without specifying the -console launch option.
 con_enable "1"
 
-// Enable cheats in local lobbies
+//Enable cheats in local lobbies
 sv_cheats "1"
 
-// When enabled, right clicking an allied creep can deny it
+//When enabled, right clicking an allied creep can deny it
 dota_force_right_click_attack 0
 
-// Camera can't zoom in game mode
+//Camera can't zoom in game mode
 dota_camera_disable_zoom "1"
-
-// removes delay before allowing input on minimap
-dota_minimap_misclick_time "0.3"
-
 
 ///////////////////////////////
 //    Net_graph Settings    //
@@ -40,13 +36,13 @@ net_graphpos "1"
 net_graphproportionalfont "0"
 net_graphtext "1
 
-//Netgraph Toggle
+// Netgraph Toggle
 alias "ngToggle" "ng_On"        // Toggle between On-Off
 alias "ng_On" "net_graph 1; alias ngToggle ng_Off"
 alias "ng_Off"  "net_graph 0; alias ngToggle ng_On"
 bind "\" "ngToggle"
 
-//No embers for me
+// No embers for me (Shows random loading screen instead.)
 dota_embers "0"
 
 dota_always_show_player_names "1"     //Force show all player's names
@@ -75,13 +71,10 @@ dota_minimap_hero_size "1000"
 bind "]" "toggle dota_health_per_vertical_marker 169 333 450 263 507 543 356 712 637"
 
 //Quick Runecheck Using P
-alias "rune" "toprune"        // Toggle between Top-Bot
-alias "toprune" "dota_camera_set_lookatpos -2273 1800; alias rune botrune"
-alias "botrune"  "dota_camera_set_lookatpos 3035 -2350; alias rune toprune"
+alias "rune" "focus_toprune"        // Toggle between Top-Bot
+alias "focus_toprune" "dota_camera_set_lookatpos -2273 1800; alias rune focus_botrune"
+alias "focus_botrune"  "dota_camera_set_lookatpos 3035 -2350; alias rune focus_toprune"
 bind "P" "rune"
-
-// Enables the console
-con_enable "1"
 
 //Reload Autoexec
 bind "F10" "exec autoexec.cfg"
@@ -104,13 +97,43 @@ dota_minimap_misclick_time "0.25"
 //bind "-" "chatwheel_say 8"//missing(my lane)
 
 bind "t" "chatwheel_say 57"//current game time
-bind "k" "chatwheel_say 0"//Okay.
+//bind "k" "chatwheel_say 0"//Okay.
 
 bind "," "chatwheel_say 2"//Get back!
 bind "." "chatwheel_say 1"//Careful! (this is rarely used at my mmr :P)
 
 bind "[" "chatwheel_say 57; say_team Aegis expires in 5 mins, Rosh up in 8-11."
 bind "9" "chatwheel_say 26"//Out of mana
+
+
+// Often used responses
+//bind "s" "+chatwheel; chat0"
+alias chat0 "chat_wheel_phrase_0 8;chat_wheel_phrase_1 1;chat_wheel_phrase_2 2;chat_wheel_phrase_3 5;chat_wheel_phrase_4 12;chat_wheel_phrase_5 57;chat_wheel_phrase_6 6;chat_wheel_phrase_7 7;"
+
+// Positioning related responses
+//bind "y" "+chatwheel; chat1"
+alias chat1 "chat_wheel_phrase_0 14;chat_wheel_phrase_1 15;chat_wheel_phrase_2 16;chat_wheel_phrase_3 19;chat_wheel_phrase_4 20;chat_wheel_phrase_5 21;chat_wheel_phrase_6 22;chat_wheel_phrase_7 23;"
+
+// Spells and runes responses
+//bind "u" "+chatwheel; chat2"
+alias chat2 "chat_wheel_phrase_0 25;chat_wheel_phrase_1 26;chat_wheel_phrase_2 27;chat_wheel_phrase_3 28;chat_wheel_phrase_4 30;chat_wheel_phrase_5 31;chat_wheel_phrase_6 32;chat_wheel_phrase_7 33;"
+
+// Ganking, pushing, and detection responses
+//bind "i" "+chatwheel; chat3"
+alias chat3 "chat_wheel_phrase_0 34;chat_wheel_phrase_1 35;chat_wheel_phrase_2 36;chat_wheel_phrase_3 37;chat_wheel_phrase_4 38;chat_wheel_phrase_5 39;chat_wheel_phrase_6 41;chat_wheel_phrase_7 42;"
+
+// Laning responses
+//bind "h" "+chatwheel; chat4"
+alias chat4 "chat_wheel_phrase_0 44;chat_wheel_phrase_1 45;chat_wheel_phrase_2 46;chat_wheel_phrase_3 59;chat_wheel_phrase_4 48;chat_wheel_phrase_5 49;chat_wheel_phrase_6 50;chat_wheel_phrase_7 51;"
+
+// Flavor responses 1
+//bind "j" "+chatwheel; chat5"
+alias chat5 "chat_wheel_phrase_0 53;chat_wheel_phrase_1 0;chat_wheel_phrase_2 54;chat_wheel_phrase_3 60;chat_wheel_phrase_4 61;chat_wheel_phrase_5 62;chat_wheel_phrase_6 63;chat_wheel_phrase_7 64;"
+
+// Flavor responses 2
+//bind "k" "+chatwheel; chat6"
+alias chat6 "chat_wheel_phrase_0 65;chat_wheel_phrase_1 66;chat_wheel_phrase_2 67;chat_wheel_phrase_3 68;chat_wheel_phrase_4 69;chat_wheel_phrase_5 70;chat_wheel_phrase_6 55;chat_wheel_phrase_7 56;"
+
 
 ////////////////////////////
 //    Various Toggles    //
