Added new aliases

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -174,3 +174,36 @@ echo "-------------------------------------------------------"
 echo " AutoExec Loaded, Press F10 to reload, F11 to Dismiss. "
 echo "-------------------------------------------------------"
 echo " "
+
+
+////////////////////////////
+//    Various Aliases    //
+//////////////////////////
+
+//Alias for creating Allies
+
+//Create Sven to act as a punching bag and to test magic immunity vs skills
+alias "create_sven" "dota_create_unit sven; dota_bot_give_level 25; dota_bot_give_item item_heart; dota_bot_give_item item_black_king_bar; dota_bot_give_item item_heart; dota_bot_give_item item_heart; dota_bot_give_item item_heart; dota_bot_give_item item_heart"
+
+//Create a practice meepo
+alias "create_meepo" "dota_hero_level 25; dota_dev player_givegold 99999; dota_create_item item_power_treads; dota_create_item item_blink; dota_create_item item_ring_of_basilius; dota_create_item item_ultimate_scepter; dota_create_item item_courier; dota_create_item item_flying_courier"
+
+//Alias for creating enemies
+
+//Create an enemy Nature's Prophet to run around placing wards
+alias "create_enemy_np" "dota_create_unit furion enemy; dota_bot_give_level 25; dota_bot_give_item item_travel_boots; dota_bot_give_item item_cyclone; give_bots_wards; give_bots_wards; give_bots_wards; give_bots_wards; give_bots_wards; dota_bot_give_item item_sange_and_yasha; dota_bot_give_item item_ancient_janggo"
+
+//Create an enemy Sven as a punching bag and BKB tester
+alias "create_enemy_sven" "dota_create_unit sven enemy; dota_bot_give_level 25; dota_bot_give_item item_heart; dota_bot_give_item item_black_king_bar; dota_bot_give_item item_heart; dota_bot_give_item item_heart; dota_bot_give_item item_heart; dota_bot_give_item item_heart"
+
+//Miscellaneous aliases
+
+//Pause aliases
+alias "pause_kb"    "say can we pause please? need to fix keyboard; dota_pause"
+alias "pause_mouse" "say can we pause please? need to fix mouse; dota_pause"
+alias "pause_wc"    "say can we pause please? need to use bathroom; dota_pause"
+alias "pause_door"  "say can we pause please? someone's banging on the door; dota_pause"
+alias "pause_cat"   "say can we pause please? cat puked something awful; dota_pause"
+
+//A message to use when being a benevolent captain
+alias "say_captain" "say_team what roles do you want? what heroes can you play? no guarantees but it helps to know. also suggest bans as we go."
