Updated chatwheel bindings

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -92,47 +92,87 @@ dota_minimap_misclick_time "0.25"
 //////////////////////////
 //    In-Game Chat     //
 ////////////////////////
-//bind "," "chatwheel_say 42"//they have detection
-//bind "." "chatwheel_say 7"//Well played! (this is rarely used at my mmr :P)
-//bind "-" "chatwheel_say 8"//missing(my lane)
-
-bind "t" "chatwheel_say 57"//current game time
-//bind "k" "chatwheel_say 0"//Okay.
 
 bind "," "chatwheel_say 2"//Get back!
 bind "." "chatwheel_say 1"//Careful! (this is rarely used at my mmr :P)
 
-bind "[" "chatwheel_say 57; say_team Aegis expires in 5 mins, Rosh up in 8-11."
-bind "9" "chatwheel_say 26"//Out of mana
-
-
-// Often used responses
-//bind "s" "+chatwheel; chat0"
-alias chat0 "chat_wheel_phrase_0 8;chat_wheel_phrase_1 1;chat_wheel_phrase_2 2;chat_wheel_phrase_3 5;chat_wheel_phrase_4 12;chat_wheel_phrase_5 57;chat_wheel_phrase_6 6;chat_wheel_phrase_7 7;"
-
 // Positioning related responses
-//bind "y" "+chatwheel; chat1"
-alias chat1 "chat_wheel_phrase_0 14;chat_wheel_phrase_1 15;chat_wheel_phrase_2 16;chat_wheel_phrase_3 19;chat_wheel_phrase_4 20;chat_wheel_phrase_5 21;chat_wheel_phrase_6 22;chat_wheel_phrase_7 23;"
+bind "9" "+chatwheel; chat_positioning"
+alias chat_positioning "chat_wheel_phrase_0 14;chat_wheel_phrase_1 15;chat_wheel_phrase_2 16;chat_wheel_phrase_3 19;chat_wheel_phrase_4 20;chat_wheel_phrase_5 21;chat_wheel_phrase_6 22;chat_wheel_phrase_7 23;"
+
+//14 - Follow me
+//15 - Group up
+//16 - Spread out
+//19 - Be right back
+//20 - Dive!
+//21 - On my way
+//22 - chatwheel_say 22
+//23 - chatwheel_say 22
 
 // Spells and runes responses
-//bind "u" "+chatwheel; chat2"
-alias chat2 "chat_wheel_phrase_0 25;chat_wheel_phrase_1 26;chat_wheel_phrase_2 27;chat_wheel_phrase_3 28;chat_wheel_phrase_4 30;chat_wheel_phrase_5 31;chat_wheel_phrase_6 32;chat_wheel_phrase_7 33;"
+bind "8" "+chatwheel; chat_spell_and_runes"
+alias chat_spell_and_runes "chat_wheel_phrase_0 25;chat_wheel_phrase_1 26;chat_wheel_phrase_2 27;chat_wheel_phrase_3 28;chat_wheel_phrase_4 30;chat_wheel_phrase_5 31;chat_wheel_phrase_6 32;chat_wheel_phrase_7 33;"
+
+//25 - Mana
+//26 - Out of mana
+//27 - Abilities on cooldown
+//28 - Ultimate ready
+//30 - All enemy heroes missing!
+//31 - Enemy incoming!
+//32 - Invisible enemy nearby!
+//33 - Enemy has rune
 
 // Ganking, pushing, and detection responses
-//bind "i" "+chatwheel; chat3"
-alias chat3 "chat_wheel_phrase_0 34;chat_wheel_phrase_1 35;chat_wheel_phrase_2 36;chat_wheel_phrase_3 37;chat_wheel_phrase_4 38;chat_wheel_phrase_5 39;chat_wheel_phrase_6 41;chat_wheel_phrase_7 42;"
+bind "9" "+chatwheel; chat_gank_push_detection"
+alias chat_gank_push_detection "chat_wheel_phrase_0 34;chat_wheel_phrase_1 35;chat_wheel_phrase_2 36;chat_wheel_phrase_3 37;chat_wheel_phrase_4 38;chat_wheel_phrase_5 39;chat_wheel_phrase_6 41;chat_wheel_phrase_7 42;"
+
+//34 - Split push
+//35 - Coming to gank
+//36 - Requesting a gank
+//37 - Fight under the tower
+//38 - Fight under the tower
+//39 - Buy a courier please
+//41 - Can anyone upgrade the courier?
+//42 - We need detection
 
 // Laning responses
-//bind "h" "+chatwheel; chat4"
-alias chat4 "chat_wheel_phrase_0 44;chat_wheel_phrase_1 45;chat_wheel_phrase_2 46;chat_wheel_phrase_3 59;chat_wheel_phrase_4 48;chat_wheel_phrase_5 49;chat_wheel_phrase_6 50;chat_wheel_phrase_7 51;"
+bind "0" "+chatwheel; chat_laning"
+alias chat_laning "chat_wheel_phrase_0 44;chat_wheel_phrase_1 45;chat_wheel_phrase_2 46;chat_wheel_phrase_3 59;chat_wheel_phrase_4 48;chat_wheel_phrase_5 49;chat_wheel_phrase_6 50;chat_wheel_phrase_7 51;"
 
-// Flavor responses 1
-//bind "j" "+chatwheel; chat5"
-alias chat5 "chat_wheel_phrase_0 53;chat_wheel_phrase_1 0;chat_wheel_phrase_2 54;chat_wheel_phrase_3 60;chat_wheel_phrase_4 61;chat_wheel_phrase_5 62;chat_wheel_phrase_6 63;chat_wheel_phrase_7 64;"
+//44 - Re-use courier
+//45 - Deward please
+//46 - Building Mekansm
+//59 - Let's smoke gank!
+//48 - Stack and pull please
+//49 - Pull creeps please
+//50 - Pulling creeps
+//51 - Stack neutrals
 
-// Flavor responses 2
-//bind "k" "+chatwheel; chat6"
-alias chat6 "chat_wheel_phrase_0 65;chat_wheel_phrase_1 66;chat_wheel_phrase_2 67;chat_wheel_phrase_3 68;chat_wheel_phrase_4 69;chat_wheel_phrase_5 70;chat_wheel_phrase_6 55;chat_wheel_phrase_7 56;"
+// Flavour responses 1
+bind "-" "+chatwheel; chat_flavour1"
+alias chat_flavour1 "chat_wheel_phrase_0 53;chat_wheel_phrase_1 0;chat_wheel_phrase_2 54;chat_wheel_phrase_3 60;chat_wheel_phrase_4 61;chat_wheel_phrase_5 62;chat_wheel_phrase_6 63;chat_wheel_phrase_7 64;"
+
+//53 - Roshan
+//0 - Okay.
+//54 - Affirmative
+//60 - Good luck, have fun
+//61 - Nice
+//62 - Thanks!
+//63 - Sorry
+//64 - Don't give up!
+
+// Flavour responses 2
+bind "=" "+chatwheel; chat_flavour2"
+alias chat_flavour2 "chat_wheel_phrase_0 65;chat_wheel_phrase_1 66;chat_wheel_phrase_2 67;chat_wheel_phrase_3 68;chat_wheel_phrase_4 69;chat_wheel_phrase_5 70;chat_wheel_phrase_6 55;chat_wheel_phrase_7 56;"
+
+//65 - That just happened
+//66 - Game is hard
+//67 - New meta
+//68 - My bad
+//69 - I immediately regret my decision
+//70 - Relax, you're doing Fine
+//55 - Wait
+//56 - Pause please!
 
 
 ////////////////////////////
@@ -144,31 +184,13 @@ alias "MinimapHeroIcon_on" "dota_minimap_always_draw_hero_icons 1;alias HeroIcon
 alias "MinimapHeroIcon_off" "dota_minimap_always_draw_hero_icons 0;alias HeroIcons_toggle MinimapHeroIcon_on;dota_center_message 0.25 icons_0"
 bind "/" "HeroIcons_toggle"
 
-//Autoattack Toggle
-alias "attackauto_toggle" "attacka_on"
-alias "attacka_on" "dota_player_units_auto_attack 1; alias attackauto_toggle attacka_off;dota_center_message 0.25 AutoAttack_On"
-alias "attacka_off" "dota_player_units_auto_attack 0; alias attackauto_toggle attacka_on;dota_center_message 0.25 AutoAttack_Off"
-//bind "UPARROW" "attackautospell_toggle"
-
-//Autoattack after spell toggle
-alias "attackautospell_toggle" "attackas_off"
-alias "attackas_off" "dota_player_units_auto_attack_after_spell 0; alias attackautospell_toggle attackas_on;dota_center_message 0.25 AutoAttackSpell_Off"
-alias "attackas_on" "dota_player_units_auto_attack_after_spell 1; alias attackautospell_toggle attackas_off;dota_center_message 0.25 AutoAttackSpell_On"
-//bind "DOWNARROW" "attackautospell_toggle"
-
-//Teleporting halts
-alias "teleprequirehalt_toggle" "teleprh_off"
-alias "teleprh_off" "dota_player_teleport_requires_halt 0; alias teleprequirehalt_toggle teleprh_on;dota_center_message 0.25 TelReqHalt_Off"
-alias "teleprh_on" "dota_player_teleport_requires_halt 1; alias teleprequirehalt_toggle teleprh_off;dota_center_message 0.25 TelReqHalt_On"
-//bind "RIGHTARROW" "teleprequirehalt_toggle"
-
 //Select summoned units
 alias "summonselect_toggle" "summons_on"
 alias "summons_on" "dota_player_add_summoned_to_selection 1;alias summonselect_toggle summons_off;dota_center_message 0.25 selsumm_On"
 alias "summons_off" "dota_player_add_summoned_to_selection 0;alias summonselect_toggle summons_on;dota_center_message 0.25 selsumm_Off"
 //bind "LEFTARROW" "summonselect_toggle"
 
-//Print message
+//Print loading confirmation message
 echo " "
 echo "-------------------------------------------------------"
 echo " AutoExec Loaded, Press F10 to reload, F11 to Dismiss. "
