Updated autoexec to remove extraneous chat wheels.

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -96,83 +96,13 @@ dota_minimap_misclick_time "0.25"
 bind "," "chatwheel_say 2"//Get back!
 bind "." "chatwheel_say 1"//Careful! (this is rarely used at my mmr :P)
 
-// Positioning related responses
-bind "9" "+chatwheel; chat_positioning"
-alias chat_positioning "chat_wheel_phrase_0 14;chat_wheel_phrase_1 15;chat_wheel_phrase_2 16;chat_wheel_phrase_3 19;chat_wheel_phrase_4 20;chat_wheel_phrase_5 21;chat_wheel_phrase_6 22;chat_wheel_phrase_7 23;"
+// Default wheel 1
+bind "-" "+chatwheel; chat1_default1"
+alias chat1_default1 "chat_wheel_phrase_0 53;chat_wheel_phrase_1 0;chat_wheel_phrase_2 54;chat_wheel_phrase_3 60;chat_wheel_phrase_4 61;chat_wheel_phrase_5 62;chat_wheel_phrase_6 6;chat_wheel_phrase_7 64;"
 
-//14 - Follow me
-//15 - Group up
-//16 - Spread out
-//19 - Be right back
-//20 - Dive!
-//21 - On my way
-//22 - chatwheel_say 22
-//23 - chatwheel_say 22
-
-// Spells and runes responses
-bind "8" "+chatwheel; chat_spell_and_runes"
-alias chat_spell_and_runes "chat_wheel_phrase_0 25;chat_wheel_phrase_1 26;chat_wheel_phrase_2 27;chat_wheel_phrase_3 28;chat_wheel_phrase_4 30;chat_wheel_phrase_5 31;chat_wheel_phrase_6 32;chat_wheel_phrase_7 33;"
-
-//25 - Mana
-//26 - Out of mana
-//27 - Abilities on cooldown
-//28 - Ultimate ready
-//30 - All enemy heroes missing!
-//31 - Enemy incoming!
-//32 - Invisible enemy nearby!
-//33 - Enemy has rune
-
-// Ganking, pushing, and detection responses
-bind "9" "+chatwheel; chat_gank_push_detection"
-alias chat_gank_push_detection "chat_wheel_phrase_0 34;chat_wheel_phrase_1 35;chat_wheel_phrase_2 36;chat_wheel_phrase_3 37;chat_wheel_phrase_4 38;chat_wheel_phrase_5 39;chat_wheel_phrase_6 41;chat_wheel_phrase_7 42;"
-
-//34 - Split push
-//35 - Coming to gank
-//36 - Requesting a gank
-//37 - Fight under the tower
-//38 - Fight under the tower
-//39 - Buy a courier please
-//41 - Can anyone upgrade the courier?
-//42 - We need detection
-
-// Laning responses
-bind "0" "+chatwheel; chat_laning"
-alias chat_laning "chat_wheel_phrase_0 44;chat_wheel_phrase_1 45;chat_wheel_phrase_2 46;chat_wheel_phrase_3 59;chat_wheel_phrase_4 48;chat_wheel_phrase_5 49;chat_wheel_phrase_6 50;chat_wheel_phrase_7 51;"
-
-//44 - Re-use courier
-//45 - Deward please
-//46 - Building Mekansm
-//59 - Let's smoke gank!
-//48 - Stack and pull please
-//49 - Pull creeps please
-//50 - Pulling creeps
-//51 - Stack neutrals
-
-// Flavour responses 1
-bind "-" "+chatwheel; chat_flavour1"
-alias chat_flavour1 "chat_wheel_phrase_0 53;chat_wheel_phrase_1 0;chat_wheel_phrase_2 54;chat_wheel_phrase_3 60;chat_wheel_phrase_4 61;chat_wheel_phrase_5 62;chat_wheel_phrase_6 63;chat_wheel_phrase_7 64;"
-
-//53 - Roshan
-//0 - Okay.
-//54 - Affirmative
-//60 - Good luck, have fun
-//61 - Nice
-//62 - Thanks!
-//63 - Sorry
-//64 - Don't give up!
-
-// Flavour responses 2
-bind "=" "+chatwheel; chat_flavour2"
-alias chat_flavour2 "chat_wheel_phrase_0 65;chat_wheel_phrase_1 66;chat_wheel_phrase_2 67;chat_wheel_phrase_3 68;chat_wheel_phrase_4 69;chat_wheel_phrase_5 70;chat_wheel_phrase_6 55;chat_wheel_phrase_7 56;"
-
-//65 - That just happened
-//66 - Game is hard
-//67 - New meta
-//68 - My bad
-//69 - I immediately regret my decision
-//70 - Relax, you're doing Fine
-//55 - Wait
-//56 - Pause please!
+// Default wheel 2
+bind "=" "+chatwheel; chat1_default2"
+alias chat1_default2 "chat_wheel_phrase_0 55;chat_wheel_phrase_1 0;chat_wheel_phrase_2 54;chat_wheel_phrase_3 60;chat_wheel_phrase_4 61;chat_wheel_phrase_5 62;chat_wheel_phrase_6 63;chat_wheel_phrase_7 64;"
 
 
 ////////////////////////////
