--- a/config.cfg
+++ b/config.cfg
@@ -12,38 +12,21 @@ bind "9" "+dota_control_group 9"
 bind "a" "mc_attack"
 bind "b" "dota_item_execute 4"
 bind "c" "dota_item_execute 2"
-bind "d" "vgs_cur_d"
-bind "e" "vgs_cur_e"
-bind "f" "vgs_cur_f"
 bind "g" "+voicerecord"
 bind "h" "dota_hold"
 bind "i" "inspectheroinworld"
-bind "j" "+cameragrip"
-bind "k" "chatwheel_say 0"
 bind "l" "dota_glyph"
 bind "m" "mc_move"
 bind "n" "dota_item_execute 5"
 bind "o" "dota_ability_learn_mode"
-bind "p" "rune"
-bind "q" "vgs_cur_q"
-bind "r" "vgs_cur_r"
 bind "s" "dota_stop"
-bind "t" "chatwheel_say 57"
 bind "u" "dota_learn_stats"
 bind "v" "dota_item_execute 3"
-bind "w" "vgs_cur_w"
 bind "x" "dota_item_execute 1"
 bind "y" "+chatwheel"
 bind "z" "dota_item_execute 0"
 bind "KP_ENTER" "say"
-bind "[" "chatwheel_say 57; say_team Aegis expires in 5 mins, Rosh up in 8-11."
-bind "]" "toggle dota_health_per_vertical_marker 169 333 450 263 507 543 356 712 637"
 bind "`" "+showscores"
-bind "," "chatwheel_say 2"
-bind "." "chatwheel_say 1"
-bind "/" "HeroIcons_toggle"
-bind "\" "ngToggle"
-bind "-" "chatwheel_say 8"
 bind "ENTER" "say"
 bind "SPACE" "dota_recent_event"
 bind "TAB" "dota_cycle_selected"
@@ -56,14 +39,12 @@ bind "F1" "+dota_camera_follow"
 bind "F2" "dota_select_all_others"
 bind "F3" "dota_select_courier"
 bind "F4" "dota_purchase_quickbuy"
-bind "F5" "dota_courier_deliver"
-bind "F6" "dota_courier_burst"
+bind "F5" "stash_grab_all"
+bind "F6" "dota_courier_deliver"
 bind "F7" "toggleshoppanel"
 bind "F8" "dota_purchase_stickybuy"
 bind "F9" "dota_pause"
-bind "F10" "exec autoexec.cfg"
 bind "F11" "toggleconsole"
-bind "F12" "jpeg"
 _cl_minimapzoom "1"
 _overview_mode "1"
 adsp_debug "0"
@@ -112,14 +93,14 @@ cc_linger_time "1.0"
 cc_predisplay_time "0.25"
 cc_subtitles "0"
 chat_sound "0"
-chat_wheel_phrase_0 "8"
-chat_wheel_phrase_1 "69"
+chat_wheel_phrase_0 "14"
+chat_wheel_phrase_1 "15"
 chat_wheel_phrase_2 "2"
-chat_wheel_phrase_3 "3"
-chat_wheel_phrase_4 "7"
-chat_wheel_phrase_5 "5"
+chat_wheel_phrase_3 "19"
+chat_wheel_phrase_4 "20"
+chat_wheel_phrase_5 "21"
 chat_wheel_phrase_6 "6"
-chat_wheel_phrase_7 "35"
+chat_wheel_phrase_7 "23"
 chet_debug_idle "0"
 cl_allowdownload "1"
 cl_allowupload "1"
@@ -156,8 +137,8 @@ dota_assassin_complete_timeout "12.0"
 dota_bot_match_difficulty "2"
 dota_bot_match_team "2"
 dota_bot_match_use_matchmaking "1"
-dota_bot_practice_difficulty "1"
-dota_bot_practice_team "0"
+dota_bot_practice_difficulty "2"
+dota_bot_practice_team "2"
 dota_broadcaster_channel_country_name ""
 dota_broadcaster_channel_description ""
 dota_broadcaster_channel_language ""
@@ -192,13 +173,13 @@ dota_hud_healthbar_number "1"
 dota_hugeportrait "0.48"
 dota_ignore_nonfriend_guild_invites "0"
 dota_ignore_nonfriend_invites "0"
-dota_inventory_shuffled_slots "224"
+dota_inventory_shuffled_slots "232"
 dota_match_game_modes "8194"
 dota_match_game_modes_version "1"
 dota_match_languages "2"
 dota_match_map_preference_new "1"
 dota_matchgroups "3"
-dota_matchgroups_automatic "3"
+dota_matchgroups_automatic "131"
 dota_matchgroups_version "4"
 dota_minimap_always_draw_hero_icons "0"
 dota_minimap_draw_cocaster_camera "1"
@@ -211,7 +192,7 @@ dota_minimap_simple_colors "0"
 dota_mouse_spectator_window_lock "0"
 dota_mouse_window_lock "1"
 dota_mute_cobroadcasters "1"
-dota_play_landing_tab "0"
+dota_play_landing_tab "2"
 dota_player_add_summoned_to_selection "0"
 dota_player_auto_purchase_items "0"
 dota_player_multipler_orders "1"
@@ -259,7 +240,7 @@ dota_unit_interact_flash_duration "0.2"
 dsp_enhance_stereo "0"
 dsp_slow_cpu "0"
 dsp_volume "0.8"
-econ_price_sheet_crc "-566016368"
+econ_price_sheet_crc "1518480909"
 enable_boneflex "1"
 engine_no_focus_sleep "0"
 func_break_max_pieces "15"
@@ -353,7 +334,7 @@ overview_health "1"
 overview_locked "1"
 overview_names "1"
 overview_tracks "1"
-password "751335739321697332"
+password "816662347180275147"
 r_drawmodelstatsoverlaymax "1.5"
 r_drawmodelstatsoverlaymin "0.1"
 r_eyegloss "1"
@@ -379,7 +360,7 @@ snd_gamevoicevolume "0.720080"
 snd_gamevolume "0.704036"
 snd_legacy_surround "0"
 snd_mixahead "0.1"
-snd_musicvolume "0.454329"
+snd_musicvolume "0.351298"
 snd_mute_losefocus "1"
 snd_pitchquality "1"
 snd_voipvolume "1.000000"
