Added two default wheels I use often

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -98,11 +98,25 @@ bind "." "chatwheel_say 1"//Careful! (this is rarely used at my mmr :P)
 
 // Default wheel 1
 bind "-" "+chatwheel; chat1_default1"
-alias chat1_default1 "chat_wheel_phrase_0 53;chat_wheel_phrase_1 0;chat_wheel_phrase_2 54;chat_wheel_phrase_3 60;chat_wheel_phrase_4 61;chat_wheel_phrase_5 62;chat_wheel_phrase_6 6;chat_wheel_phrase_7 64;"
+alias chat1_default1 "chat_wheel_phrase_0 8;chat_wheel_phrase_1 29;chat_wheel_phrase_2 2;chat_wheel_phrase_3 3;chat_wheel_phrase_4 7;chat_wheel_phrase_5 62;chat_wheel_phrase_6 6;chat_wheel_phrase_7 32;"
+
+//                          Push
+//            Thanks!                     Invis Nearby
+//Well Played                 +                       Missing (My lane)
+//            Need Wards                  Enemy Returned!
+//                          Back
+
+
 
 // Default wheel 2
 bind "=" "+chatwheel; chat1_default2"
-alias chat1_default2 "chat_wheel_phrase_0 55;chat_wheel_phrase_1 0;chat_wheel_phrase_2 54;chat_wheel_phrase_3 60;chat_wheel_phrase_4 61;chat_wheel_phrase_5 62;chat_wheel_phrase_6 63;chat_wheel_phrase_7 64;"
+alias chat1_default2 "chat_wheel_phrase_0 55;chat_wheel_phrase_1 0;chat_wheel_phrase_2 2;chat_wheel_phrase_3 15;chat_wheel_phrase_4 20;chat_wheel_phrase_5 23;chat_wheel_phrase_6 12;chat_wheel_phrase_7 13;"
+
+//                          Go!
+//            Bait                       Initiate!
+//Dive                       +                       Wait
+//            Group up                   Okay
+//                          Back
 
 
 ////////////////////////////
