--- a/config.cfg
+++ b/config.cfg
@@ -19,6 +19,7 @@ bind "l" "dota_glyph"
 bind "m" "mc_move"
 bind "n" "dota_item_execute 5"
 bind "o" "dota_ability_learn_mode"
+bind "p" "rune"
 bind "s" "dota_stop"
 bind "u" "dota_learn_stats"
 bind "v" "dota_item_execute 3"
@@ -26,7 +27,14 @@ bind "x" "dota_item_execute 1"
 bind "y" "+chatwheel"
 bind "z" "dota_item_execute 0"
 bind "KP_ENTER" "say"
+bind "]" "toggle dota_health_per_vertical_marker 169 333 450 263 507 543 356 712 637"
 bind "`" "+showscores"
+bind "," "chatwheel_say 2"
+bind "." "chatwheel_say 1"
+bind "/" "HeroIcons_toggle"
+bind "\" "ngToggle"
+bind "-" "+chatwheel; chat1_default1"
+bind "=" "+chatwheel; chat1_default2"
 bind "ENTER" "say"
 bind "SPACE" "dota_recent_event"
 bind "TAB" "dota_cycle_selected"
@@ -39,11 +47,12 @@ bind "F1" "+dota_camera_follow"
 bind "F2" "dota_select_all_others"
 bind "F3" "dota_select_courier"
 bind "F4" "dota_purchase_quickbuy"
-bind "F5" "stash_grab_all"
-bind "F6" "dota_courier_deliver"
+bind "F5" "dota_courier_deliver"
+bind "F6" "stash_grab_all"
 bind "F7" "toggleshoppanel"
 bind "F8" "dota_purchase_stickybuy"
 bind "F9" "dota_pause"
+bind "F10" "exec autoexec.cfg"
 bind "F11" "toggleconsole"
 _cl_minimapzoom "1"
 _overview_mode "1"
@@ -93,14 +102,14 @@ cc_linger_time "1.0"
 cc_predisplay_time "0.25"
 cc_subtitles "0"
 chat_sound "0"
-chat_wheel_phrase_0 "14"
-chat_wheel_phrase_1 "15"
+chat_wheel_phrase_0 "8"
+chat_wheel_phrase_1 "29"
 chat_wheel_phrase_2 "2"
-chat_wheel_phrase_3 "19"
-chat_wheel_phrase_4 "20"
-chat_wheel_phrase_5 "21"
+chat_wheel_phrase_3 "3"
+chat_wheel_phrase_4 "7"
+chat_wheel_phrase_5 "62"
 chat_wheel_phrase_6 "6"
-chat_wheel_phrase_7 "23"
+chat_wheel_phrase_7 "32"
 chet_debug_idle "0"
 cl_allowdownload "1"
 cl_allowupload "1"
@@ -137,8 +146,8 @@ dota_assassin_complete_timeout "12.0"
 dota_bot_match_difficulty "2"
 dota_bot_match_team "2"
 dota_bot_match_use_matchmaking "1"
-dota_bot_practice_difficulty "2"
-dota_bot_practice_team "2"
+dota_bot_practice_difficulty "1"
+dota_bot_practice_team "0"
 dota_broadcaster_channel_country_name ""
 dota_broadcaster_channel_description ""
 dota_broadcaster_channel_language ""
@@ -179,7 +188,7 @@ dota_match_game_modes_version "1"
 dota_match_languages "2"
 dota_match_map_preference_new "1"
 dota_matchgroups "3"
-dota_matchgroups_automatic "131"
+dota_matchgroups_automatic "1"
 dota_matchgroups_version "4"
 dota_minimap_always_draw_hero_icons "0"
 dota_minimap_draw_cocaster_camera "1"
@@ -192,7 +201,7 @@ dota_minimap_simple_colors "0"
 dota_mouse_spectator_window_lock "0"
 dota_mouse_window_lock "1"
 dota_mute_cobroadcasters "1"
-dota_play_landing_tab "2"
+dota_play_landing_tab "1"
 dota_player_add_summoned_to_selection "0"
 dota_player_auto_purchase_items "0"
 dota_player_multipler_orders "1"
