Disabled autocheats in local lobbies

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -17,7 +17,7 @@ engine_no_focus_sleep "0"
 con_enable "1"
 
 //Enable cheats in local lobbies
-sv_cheats "1"
+//sv_cheats "1"
 
 //When enabled, right clicking an allied creep can deny it
 dota_force_right_click_attack 0
