--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -93,15 +93,17 @@ dota_minimap_misclick_time "0.25"
 //    In-Game Chat     //
 ////////////////////////
 
+
+// Often used QuickChat messages
 bind "," "chatwheel_say 2"//Get back!
-bind "." "chatwheel_say 1"//Careful! (this is rarely used at my mmr :P)
+bind "." "chatwheel_say 1"//Careful!
 
 // Default wheel 1
 bind "-" "+chatwheel; chat1_default1"
-alias chat1_default1 "chat_wheel_phrase_0 8;chat_wheel_phrase_1 29;chat_wheel_phrase_2 2;chat_wheel_phrase_3 3;chat_wheel_phrase_4 7;chat_wheel_phrase_5 62;chat_wheel_phrase_6 6;chat_wheel_phrase_7 32;"
+alias chat1_default1 "chat_wheel_phrase_0 8;chat_wheel_phrase_1 29;chat_wheel_phrase_2 2;chat_wheel_phrase_3 3;chat_wheel_phrase_4 7;chat_wheel_phrase_5 40;chat_wheel_phrase_6 6;chat_wheel_phrase_7 32;"
 
 //                          Push
-//            Thanks!                     Invis Nearby
+//            Up Courier                  Invis Enemy Nearby
 //Well Played                 +                       Missing (My lane)
 //            Need Wards                  Enemy Returned!
 //                          Back
@@ -110,12 +112,12 @@ alias chat1_default1 "chat_wheel_phrase_0 8;chat_wheel_phrase_1 29;chat_wheel_ph
 
 // Default wheel 2
 bind "=" "+chatwheel; chat1_default2"
-alias chat1_default2 "chat_wheel_phrase_0 55;chat_wheel_phrase_1 0;chat_wheel_phrase_2 2;chat_wheel_phrase_3 15;chat_wheel_phrase_4 20;chat_wheel_phrase_5 23;chat_wheel_phrase_6 12;chat_wheel_phrase_7 13;"
+alias chat1_default2 "chat_wheel_phrase_0 55;chat_wheel_phrase_1 43;chat_wheel_phrase_2 2;chat_wheel_phrase_3 15;chat_wheel_phrase_4 20;chat_wheel_phrase_5 23;chat_wheel_phrase_6 12;chat_wheel_phrase_7 13;"
 
 //                          Go!
 //            Bait                       Initiate!
 //Dive                       +                       Wait
-//            Group up                   Okay
+//            Group up                   Buy TP
 //                          Back
 
 
