Restored Rosh bind

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -67,6 +67,9 @@ dota_disable_range_finder "0"
 //Enlarge minimap hero display
 dota_minimap_hero_size "1000"
 
+//Roshan timer
+bind "[" "chatwheel_say 57; say_team Aegis expires in 5 mins, Rosh up in 8-11."
+
 //toggle health keys
 bind "]" "toggle dota_health_per_vertical_marker 169 333 450 263 507 543 356 712 637"
 
